# genie

./: .env.EXAMPLE  LICENSE  README.md  config.json  pyproject.toml  requirements.txt  schema.json  xp_table.json
src/: config.py  main.py
src/templates/: bot.py
src/utils/: __init__.py  database.py  helpers.py
